--- a/hardware.yml
+++ b/hardware.yml
@@ -1,3 +1,3 @@
 - name: 1 x PiCamera
   img: camera
-  url: http://shop.pimoroni.com/products/PiCamera
+  url: http://thepihut.com/products/raspberry-pi-camera-module
